--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 body {
   text-align: center;
   font-family: courier;
-  background-image: url("../assets/image.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
+  margin: 60px auto;
+  text-align: center;
+  background-color: #45261F;
+  transition: background-color 0.2s cubic-bezier(0, -1.85, .27, 1.75);
 }
 
 h1 {
@@ -138,10 +139,7 @@ h1 {
 }
 
 /*body {
-  margin: 60px auto;
-  text-align: center;
-  background-color: #ff9295;
-  transition: background-color 0.2s cubic-bezier(0, -1.85, .27, 1.75);
+
 }
 
 .toggle {
