--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   font-family: courier;
   margin: 60px auto;
   text-align: center;
-  background-color: #45261F;
+  background-color: #E2E463;
   transition: background-color 0.2s cubic-bezier(0, -1.85, .27, 1.75);
 }
 
